<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpdateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/black"
            android:gravity="center">

            <TextView
                android:id="@+id/Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/edittext"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.3"
            android:gravity="right"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/last_modified_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/date"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:gravity="right"
            android:theme="@style/TextLabel"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/enter_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLength="40"
                android:singleLine="true"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:gravity="right"
            android:theme="@style/TextLabel"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/enter_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="top"
                android:hint="@string/enter_text"
                android:inputType="textMultiLine"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bordercolor">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.15"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <ImageButton
                    android:id="@+id/I_save_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:contentDescription="@string/save"
                    android:src="@drawable/details_activity_vector_save" />

                <Button
                    android:id="@+id/B_save_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/I_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:contentDescription="@string/favorites"
                    android:src="@drawable/details_activity_vector_star" />

                <Button
                    android:id="@+id/B_favorite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/favorite"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/I_copy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:contentDescription="@string/copy"
                    android:src="@drawable/details_activity_vector_copy" />

                <Button
                    android:id="@+id/B_copy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/copy"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/Ishare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:contentDescription="@string/share"
                    android:src="@drawable/details_activity_vector_share" />

                <Button
                    android:id="@+id/Bshare"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>