<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:ignore="NamespaceTypo">


        <LinearLayout
            android:id="@+id/edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white"
            android:baselineAligned="false"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8.5"
                android:orientation="vertical">

                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:ignore="NestedWeights">

                    <ImageButton
                        android:id="@+id/redheart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:background="@null"
                        android:contentDescription="@string/blackheart"
                        android:onClick="buttonPressed"
                        android:src="@drawable/main_activity_icon_star_black" />
                </LinearLayout>
-->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ImageButton
                        android:layout_weight="1"
                        android:background="@null"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/details_activity_vector_star"
                        android:onClick="buttonPressed"/>

                    <TextView
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:gravity="bottom"
                        android:text="@string/date"
                        android:textSize="7sp"
                        android:textStyle="bold"
                        app:ignore="SmallSp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    app:ignore="NestedWeights,RtlHardcoded">

                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:textStyle="bold"
                        android:id="@+id/NotePadTitle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:text="@string/title"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1">

                    <TextView
                        android:textColor="@color/black"
                        android:id="@+id/NoteDetails"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:singleLine="true"
                        android:text="@string/Notedetails"
                        android:textSize="17sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/main_activity_border_recycler_view">

        </LinearLayout>

</RelativeLayout>